<resources>
    <string name="app_name" translatable="false">FirstSteps_CasadoJaime</string>
    <string name="increment_button">Increment value</string>
    <string name="hello_kotlin">Hello Kotlin!!!</string>
    <string name="base_text">Number of times you pressed the button: %1$d  %2$d</string>
    <string name="birth_date">Birth date</string>
    <string name="city">City</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="go_to_profile">Go to profile</string>
    <string name="production_year">Year:</string>
    <string name="genre">Genre:</string>
    <string name="film_photo">Film photo</string>
    <string name="go_to_film_list">Go to films list</string>
    <string name="shareimage" translatable="false">ShareImage</string>
    <string name="newimage" translatable="false">NewImage</string>
    <string name="favimage" translatable="false">FavImage</string>
    <string name="release_date">Release date:</string>
    <string name="movie_poster" translatable="false">movie _poster</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="here_will_go_the_favorite_view">Here will go the Favorites View</string>
    <string name="search_hint">Search Movie</string>
    <string name="no_results">No results</string>
    <string name="director" translatable="false">Director:</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="cast">Cast:</string>
    <string name="order_by">Order by</string>
    <string name="title">Title</string>
    <string name="date_of_entry">Date of entry</string>
    <string name="delete_favorites">Delete favorites</string>
</resources>
